# ns3-static-library

./: README.md
foo/: CMakeLists.txt  foo.cc  foo.h
ns3-x/scratch/: link-static.cc  wscript
ns3-x/src/mp3/: mysrc.h  wscript
ns3-x/src/mp3/model/: mysrc.cc  mysrc.h
